# arabic-nano-gpt

./: .gitignore  README.md  environment.yml  example.env  pyproject.toml  train.sh  train_lm.sh
notebooks/: LM_training.ipynb  build_LM.ipynb  build_model.ipynb  build_tokenizer.ipynb  load_dataset.ipynb  test_LM_generation.ipynb
src/: build_tokenizer.py  preprocess_data.py  train_causal_lm.py
